--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                 <div class="col-lg-6 position-lg-absolute right-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/home_img/Prime_Location.jpg) center"
+                    data-bgimage="url(img/home_img/airport_access_pincode.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
@@ -908,7 +908,7 @@
                 <div class="col-lg-6 position-lg-absolute left-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/home_img/Modern_Design.jpg) center"
+                    data-bgimage="url(img/home_img/Faith_Footfall_Pincode.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
@@ -940,7 +940,7 @@
                 <div class="col-lg-6 position-lg-absolute right-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/home_img/amenities.jpg) center"
+                    data-bgimage="url(img/home_img/Ring_Road.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
@@ -972,7 +972,7 @@
                 <div class="col-lg-6 position-lg-absolute left-half h-100">
                   <div
                     class="image"
-                    data-bgimage="url(img/home_img/integrated.jpg) center"
+                    data-bgimage="url(img/home_img/Greenfield_Township_Ecosystem.jpg) center"
                   ></div>
                 </div>
                 <!-- Text -->
