--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -290,7 +290,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/Infrastructure.jpg"
+                      src="img/upcoming/Deep_Spiritual_Connection2.jpg"
                       class="jarallax-img"
                       alt=""
                     />
@@ -322,7 +322,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/Appreciation_Through_Demand.jpg"
+                      src="img/upcoming/Lucraative_Fianacial_Opportunity.jpg"
                       class="jarallax-img"
                       alt=""
                     />
@@ -336,7 +336,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/Spiritual_Tourism_2.jpg"
+                      src="img/upcoming/Heritage_Innovation.jpg"
                       class="jarallax-img"
                       alt=""
                     />
@@ -368,7 +368,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/Income_Potential.jpg"
+                      src="img/upcoming/vibrant.png"
                       class="jarallax-img"
                       alt=""
                     />
@@ -382,7 +382,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/Enhanced_Community_Infrastructure.jpg"
+                      src="img/upcoming/Global_Tourist_Destination.jpg"
                       class="jarallax-img"
                       alt=""
                     />
@@ -403,9 +403,9 @@
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-lg-5">
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Cultural Renaissance Catalyst</h2>
+                  <h2 class="wow fadeInUp">Greenfield Township Ecosystem</h2>
                   <p>
-                    The township lies at the heart of Ayodhya’s cultural revival, with museums, performance spaces, and heritage architecture embedded into its urban fabric, adding long-term prestige to your address.
+                    Our presence near Navya Ayodhya places you in the heart of a 1,400-acre smart city plan with state bhawans, museums, a five-star hotel zone, and civic infrastructure.
                   </p>
                 </div>
               </div>
@@ -414,7 +414,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/Demand_Surges.jpg"
+                      src="img/upcoming/Cultural_Renaissance_Catalyst.jpg"
                       class="jarallax-img"
                       alt=""
                     />
