updated feature bg img

--- a/index.html
+++ b/index.html
@@ -853,16 +853,17 @@
           class="jarallax relative overflow-hidden text-light section-dark pt60 pb60"
         >
           <div class="overlay op-5"></div>
-          <img src="img/Features_banner_1.jpg" class="jarallax-img" alt="" />
+          <img src="img/home_img/Ayodhya_Masterplan.jpg" class="jarallax-img" alt="" />
           <div class="container">
             <div class="row">
               <div class="col-lg-8 offset-lg-2">
                 <div
-                  class="subtitle id-color wow fadeInUp mb-3"
+                  class="subtitle id-color wow fadeInUp mb-1"
                   style="color: #fff"
                 >
+                KEY ADVANTAGES OF
                 </div>
-                <h2 class="wow fadeInUp">Key Advantages of Our Ayodhya Vision</h2>
+                <h1 class="wow fadeInUp">AYODHYA</h1>
               </div>
             </div>
           </div>
