Updated all the images

--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -220,13 +220,25 @@
                 <div class="de-flex-col header-col-mid">
                   <ul id="mainmenu">
                     <li>
-                      <a style="font-size: 20px;" class="menu-item" href="index.html">Home</a>
+                      <a
+                        style="font-size: 20px"
+                        class="menu-item"
+                        href="index.html"
+                        >Home</a
+                      >
                     </li>
                     <li>
-                      <a style="font-size: 20px;" class="menu-item" href="/about.html">About</a>
+                      <a
+                        style="font-size: 20px"
+                        class="menu-item"
+                        href="/about.html"
+                        >About</a
+                      >
                     </li>
                     <li class="menu-item">
-                      <a style="font-size: 20px;" href="/upcoming-project.html">Projects</a>
+                      <a style="font-size: 20px" href="/upcoming-project.html"
+                        >Projects</a
+                      >
                       <ul>
                         <li>
                           <a href="/ongoing-project.html">Ongoing Project</a>
@@ -236,9 +248,21 @@
                         </li>
                       </ul>
                     </li>
-                    <li><a style="font-size: 20px;" class="menu-item" href="/index.html#features">Features</a></li>
                     <li>
-                      <a style="font-size: 20px;" class="menu-item" href="/index.html#contact">Contact</a>
+                      <a
+                        style="font-size: 20px"
+                        class="menu-item"
+                        href="/index.html#features"
+                        >Features</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        style="font-size: 20px"
+                        class="menu-item"
+                        href="/index.html#contact"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -271,7 +295,11 @@
               <div class="col-lg-6 text-center">
                 <h1>Upcoming Project</h1>
                 <p class="lead mt-3">
-                  Discover the promise of Ayodhya’s most ambitious township. A transformative address where sacred tradition meets smart-city innovation. PincodeInfra’s upcoming township in Ayodhya offers a unique blend of spiritual living, modern design, and future-ready infrastructure.
+                  Discover the promise of Ayodhya’s most ambitious township. A
+                  transformative address where sacred tradition meets smart-city
+                  innovation. PincodeInfra’s upcoming township in Ayodhya offers
+                  a unique blend of spiritual living, modern design, and
+                  future-ready infrastructure.
                 </p>
                 <ul class="crumb">
                   <li><a href="index.html">Home</a></li>
@@ -302,7 +330,10 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Deep Spiritual Connection</h2>
                   <p>
-                    Living in Ayodhya means experiencing serenity, ancient rituals, and inner peace. Built into the very landscape of this thoughtfully planned township designed to inspire spiritual well-being.
+                    Living in Ayodhya means experiencing serenity, ancient
+                    rituals, and inner peace. Built into the very landscape of
+                    this thoughtfully planned township designed to inspire
+                    spiritual well-being.
                   </p>
                 </div>
               </div>
@@ -313,7 +344,10 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Lucrative Financial Opportunity</h2>
                   <p>
-                    With soaring real estate demand, Ayodhya’s growth corridors promise high returns. This township ensures long-term value with early-mover investment opportunities and consistent appreciation potential.
+                    With soaring real estate demand, Ayodhya’s growth corridors
+                    promise high returns. This township ensures long-term value
+                    with early-mover investment opportunities and consistent
+                    appreciation potential.
                   </p>
                 </div>
               </div>
@@ -322,7 +356,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/upcoming/Lucraative_Fianacial_Opportunity.jpg"
+                      src="img/upcoming/lucraative_financial.png"
                       class="jarallax-img"
                       alt=""
                     />
@@ -348,7 +382,10 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Heritage Meets Innovation</h2>
                   <p>
-                    PincodeInfra’s township combines the legacy of Ayodhya with cutting-edge infrastructure; wide roads, utilities grid, and smart-city features to deliver sustainable living in a heritage-rich zone.
+                    PincodeInfra’s township combines the legacy of Ayodhya with
+                    cutting-edge infrastructure; wide roads, utilities grid, and
+                    smart-city features to deliver sustainable living in a
+                    heritage-rich zone.
                   </p>
                 </div>
               </div>
@@ -359,7 +396,10 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Vibrant Community Network</h2>
                   <p>
-                    The township is envisioned as a hub for like-minded individuals who value culture, community, and lifestyle. Fostering organic growth and a shared spiritual-modern experience.
+                    The township is envisioned as a hub for like-minded
+                    individuals who value culture, community, and lifestyle.
+                    Fostering organic growth and a shared spiritual-modern
+                    experience.
                   </p>
                 </div>
               </div>
@@ -368,7 +408,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-2 jarallax">
                     <img
-                      src="img/upcoming/vibrant_community.jpg"
+                      src="img/upcoming/Vib_Com.png"
                       class="jarallax-img"
                       alt=""
                     />
@@ -382,7 +422,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/upcoming/Global_Tourist_Destination.jpg"
+                      src="img/upcoming/global_tourist.png"
                       class="jarallax-img"
                       alt=""
                     />
@@ -394,7 +434,10 @@
                 <div class="ms-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Global Tourist Hub</h2>
                   <p>
-                    Ayodhya’s airport, temple corridors, and world-class tourism projects are creating a global magnet. This township will benefit from constant footfall, hospitality demand, and economic upliftment.
+                    Ayodhya’s airport, temple corridors, and world-class tourism
+                    projects are creating a global magnet. This township will
+                    benefit from constant footfall, hospitality demand, and
+                    economic upliftment.
                   </p>
                 </div>
               </div>
@@ -405,7 +448,9 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Greenfield Township Ecosystem</h2>
                   <p>
-                    Our presence near Navya Ayodhya places you in the heart of a 1,400-acre smart city plan with state bhawans, museums, a five-star hotel zone, and civic infrastructure.
+                    Our presence near Navya Ayodhya places you in the heart of a
+                    1,400-acre smart city plan with state bhawans, museums, a
+                    five-star hotel zone, and civic infrastructure.
                   </p>
                 </div>
               </div>
@@ -435,32 +480,39 @@
               <div
                 class="d-lg-flex align-items-center justify-content-between text-center"
               >
-              <div>
-                <img src="img/LogoWhite.png" class="w-250px" alt="" /><br />
-                <div class="social-icons mb-sm-30 mt-4">
-                  <a
-                    href="https://www.facebook.com/profile.php?id=61573418790165"
-                    ><i class="fa-brands fa-facebook fa-lg"></i
-                  ></a>
-                  <a href="https://x.com/pincodeinfra"
-                    ><i class="fa-brands fa-x-twitter fa-lg"></i
-                  ></a>
-                  <a
-                    href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"
-                    ><i class="fa-brands fa-youtube fa-lg"></i
-                  ></a>
-                  <a href="https://www.instagram.com/pincodeinfra"
-                    ><i class="fa-brands fa-instagram fa-lg"></i
-                  ></a>
-                  <a
-                    href="https://www.linkedin.com/company/105912895/admin/dashboard/"
-                    ><i class="fa-brands fa-linkedin"></i
-                  ></a>
+                <div>
+                  <img src="img/LogoWhite.png" class="w-250px" alt="" /><br />
+                  <div class="social-icons mb-sm-30 mt-4">
+                    <a
+                      href="https://www.facebook.com/profile.php?id=61573418790165"
+                      ><i class="fa-brands fa-facebook fa-lg"></i
+                    ></a>
+                    <a href="https://x.com/pincodeinfra"
+                      ><i class="fa-brands fa-x-twitter fa-lg"></i
+                    ></a>
+                    <a
+                      href="https://www.youtube.com/channel/UCQcojLZA80SOr_OPx2AniFQ"
+                      ><i class="fa-brands fa-youtube fa-lg"></i
+                    ></a>
+                    <a href="https://www.instagram.com/pincodeinfra"
+                      ><i class="fa-brands fa-instagram fa-lg"></i
+                    ></a>
+                    <a
+                      href="https://www.linkedin.com/company/105912895/admin/dashboard/"
+                      ><i class="fa-brands fa-linkedin"></i
+                    ></a>
+                  </div>
                 </div>
-              </div>
                 <div>
                   <h3 class="ml-4">Navigation</h3>
-                  <ul style="display: flex; flex-direction: column; justify-content: center; padding-left: 0;">
+                  <ul
+                    style="
+                      display: flex;
+                      flex-direction: column;
+                      justify-content: center;
+                      padding-left: 0;
+                    "
+                  >
                     <a href="/index.html">Home</a>
                     <a href="/about.html">About</a>
                     <a href="/upcoming-project.html">Upcoming Project</a>
@@ -475,8 +527,11 @@
                     Noida, Uttar Pradesh 201301
                   </div>
                   <h3 class="mt-4">Contact Info</h3>
-                  <div style="display: flex; flex-direction: column; ">
-                    <small><i class="fa-solid fa-envelope"></i> info@pincodeinfra.com</small>
+                  <div style="display: flex; flex-direction: column">
+                    <small
+                      ><i class="fa-solid fa-envelope"></i>
+                      info@pincodeinfra.com</small
+                    >
                     <small><i class="fa-solid fa-phone"></i> 7620203030</small>
                   </div>
                 </div>
