--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -342,12 +342,9 @@
             <div class="row g-0 align-items-center justify-content-center">
               <div class="col-lg-5">
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
-                  <h2 class="wow fadeInUp">Lucrative Financial Opportunity</h2>
+                  <h2 class="wow fadeInUp">Expanding Educational Ecosystem</h2>
                   <p>
-                    With soaring real estate demand, Ayodhya’s growth corridors
-                    promise high returns. This township ensures long-term value
-                    with early-mover investment opportunities and consistent
-                    appreciation potential.
+                    Ayodhya is rapidly evolving into a center for holistic education, with upcoming institutions focused on spiritual studies, heritage conservation, and modern learning. Investing in this township places residents near future-ready educational infrastructure that fosters knowledge, character, and long-term societal value.
                   </p>
                 </div>
               </div>
@@ -448,8 +445,7 @@
                 <div class="me-lg-5 wow scaleIn bg-white z-index-top">
                   <h2 class="wow fadeInUp">Greenfield Township Ecosystem</h2>
                   <p>
-                    Our presence near Navya Ayodhya places you in the heart of a
-                    1,400-acre smart city plan with state bhawans, museums, a
+                    Our presence near Navya Ayodhya places you in the heart of a smart city plan with state bhawans, museums, a
                     five-star hotel zone, and civic infrastructure.
                   </p>
                 </div>
