--- a/upcoming-project.html
+++ b/upcoming-project.html
@@ -419,7 +419,7 @@
                 <div class="relative wow fadeInUp" data-wow-delay=".3s">
                   <div class="shape-mask-1 jarallax">
                     <img
-                      src="img/upcoming/global_tourist.png"
+                      src="img/upcoming/Tourist_Upcoming_Project.jpg"
                       class="jarallax-img"
                       alt=""
                     />
