--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
         <div id="top"></div>
 
         <section id="subheader" class="relative jarallax text-light">
-          <img src="img/ABT_Us.jpg" class="jarallax-img" alt="" />
+          <img src="img/home_img/about_banner.jpg" class="jarallax-img" alt="" />
           <div class="container relative z-index-1000">
             <div class="row justify-content-center">
               <div class="col-lg-12 text-center">
